# gmoney

./: README.md  README.rst  pyproject.toml
gmoney/: g.py
